[gd_scene load_steps=8 format=3 uid="uid://7lerplym0gv4"]

[ext_resource type="Script" path="res://scenes/gameover/game_over.gd" id="1_bb5oa"]
[ext_resource type="FontFile" uid="uid://b0u5uw1wp4ypk" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="1_v4gw4"]
[ext_resource type="LabelSettings" uid="uid://budde3xtubiwm" path="res://assets/sh_48_red.tres" id="1_xxb3i"]
[ext_resource type="AudioStream" uid="uid://c0v3mmklfbve7" path="res://assets/audio/game_over.wav" id="4_6u37r"]

[sub_resource type="LabelSettings" id="LabelSettings_pr6ji"]
font = ExtResource("1_v4gw4")
font_size = 68
font_color = Color(1, 0, 0.105882, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 0
shadow_color = Color(1, 1, 1, 0.815686)
shadow_offset = Vector2(3, 2)

[sub_resource type="Animation" id="Animation_0psae"]
resource_name = "Glow"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_60qlp"]
_data = {
"Glow": SubResource("Animation_0psae")
}

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bb5oa")

[node name="GO_LABEL" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_pr6ji")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PR_Space" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Press Space
to continue"
label_settings = ExtResource("1_xxb3i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="PR_Space"]
libraries = {
"": SubResource("AnimationLibrary_60qlp")
}
autoplay = "Glow"

[node name="deathtimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="gameover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6u37r")

[connection signal="timeout" from="deathtimer" to="." method="_on_deathtimer_timeout"]
